# aac_encode

./: .gitignore  CMakeLists.txt
inc/: aac_encode.h
src/: aac_encode.cpp
