cmake_minimum_required(VERSION 2.8)
project(aac)
set(CMAKE_BUILD_TYPE "Debug" ) 
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
include_directories(./inc)
include_directories(./inc/libswscale/fdk-aac)
add_executable(aac ./src/aac_encode.cpp)
link_directories(./lib)
target_link_libraries(aac libfdk-aac.a)
